Build time choice of mapping model
TODO:
Test with SceneScape UI
